<resources>
    <string name="About_bridge">About \"Bridge\"</string>
    <string name="About_bridge_text">"The system \"Bridge\" is intersity taxi rides on cars, which go in the same direction, with fixed cost.

The system is active Russia-wide.

There is NO need to activate the shift to receive the order.

Doesn't matter where you are, the system \"Bridge\" will help you to come back to your city with the client.

Call-center 8-800-555-30-30.
"</string>
    <string name="About_bridge_text_condition">Для доступа к предварительным заказам и для того, чтобы пользоваться приоритетом в получении заказов, вы должны выполнить %d заказов в родном городе за последние 10 дней.</string>
    <string name="About_driver_password">Password must contain 4 digits</string>
    <string name="About_driver_password_attention">Attention! You must enter this password every time you activate the shift. Please remember it.</string>
    <string name="Accept">Принимаю</string>
    <string name="Accept_card_payment">Accept payment by bank card</string>
    <string name="Alarm">Alarm</string>
    <string name="Alarm_message_was_sent">Alarm message was sent</string>
    <string name="Alarm_msg">Do you wish to send an alarm?</string>
    <string name="An_error_occurred_while_file_sending">An error occurred while file sending!</string>
    <string name="An_error_occurred_while_taximeter_start">An error occurred while taximeter start!</string>
    <string name="An_unknown_error_occurred">An unknown error occurred!</string>
    <string name="Answer">Answer</string>
    <string name="Answer_question">Reply \"%s\"?</string>
    <string name="Answer_question_cost_confirm">Reply \"%3$s\"? Order cost is %1$.0f %2$s</string>
    <string name="Answer_was_sent_to_server">Reply \"%s\" was sent to server</string>
    <string name="Application_error_occurred">Error in the app</string>
    <string name="Application_is_invalid">Приложение установлено некорректно. Переустановите приложение</string>
    <string name="Application_is_started">Application \"%s\" is starting...</string>
    <string name="Application_must_be_installed_on_iternal_storage">Приложение должно быть установлено во внутренней памяти</string>
    <string name="Application_settings">Настройки приложения</string>
    <string name="Application_settings_account_title">Управление учетной записью</string>
    <string name="Application_settings_bridge_sound_mode_title">Звук для заказов МОСТа</string>
    <string name="Application_settings_checking_desc">При завершении заказа водитель автоматически регистрируется на стоянке</string>
    <string name="Application_settings_checking_title">Автоматическая регистрация</string>
    <string name="Application_settings_confirm_desc">Позволяет брать заказы только после подтверждения</string>
    <string name="Application_settings_confirm_title">Подтверждение взятия</string>
    <string name="Application_settings_green_desc">Позволяет водителю принимать входящие заказы, находящиеся в зоне доступности</string>
    <string name="Application_settings_green_title">Зеленая волна</string>
    <string name="Application_settings_menu_desc">Показывает экран всех свободных заказов по умолчанию</string>
    <string name="Application_settings_menu_title">Свободные заказы списком</string>
    <string name="Application_settings_mode_desc">Настраивает интерфейс в темный или светлый режим</string>
    <string name="Application_settings_mode_title">Дневной/ночной режим</string>
    <string name="Application_settings_phone_title">Контактный телефон</string>
    <string name="Application_settings_settings_title">Настройки</string>
    <string name="Application_settings_sound_desc">При появлении новых свободных заказов на стоянках будет звучать мелодия</string>
    <string name="Application_settings_sound_title">Свободные заказы</string>
    <string name="Application_settings_sounds_free_title">Звук для свободных заказов</string>
    <string name="Application_settings_sounds_msg_title">Звук для сообщений</string>
    <string name="Application_settings_sounds_new_title">Звук для новых заказов</string>
    <string name="Application_settings_sounds_pre_title">Звук для предзаказов</string>
    <string name="Application_settings_sounds_select_title">Выберите звук уведомления</string>
    <string name="Application_settings_sounds_title">Управление звуками</string>
    <string name="Application_settings_with_version">App settings %s</string>
    <string name="Application_was_already_started">Application \"%s\" was already started</string>
    <string name="Application_was_started">Application \"%s\" is started</string>
    <string name="Application_will_be_restarted">App will be restarted automatically</string>
    <string name="Are_you_sure_you_want_to_answer_question">Are you sure you want to reply \"%s\"?</string>
    <string name="Are_you_sure_you_want_to_bridge_question">Вы уверены, что хотите перейти в режим МОСТ?</string>
    <string name="Are_you_sure_you_want_to_city_question">Вы уверены, что хотите перейти в режим TapTaxi.Водитель?</string>
    <string name="Are_you_sure_you_want_to_close_shift_question">Are you sure you want to close the shift?</string>
    <string name="Are_you_sure_you_want_to_exit_question">Are you sure you want to exit?</string>
    <string name="Arrived">At the pick-up location</string>
    <string name="Authorization">Authorization...</string>
    <string name="Authorization_error">Wrong call-sign or password!</string>
    <string name="Available">Available</string>
    <string name="BAEC_DRIVER_WRONG_CONTRACT_NUMBER">Неверный номер договора</string>
    <string name="BAEC_DRIVER_WRONG_PASSWORD">Неверный пароль</string>
    <string name="BAEC_DRIVER_WRONG_STATE">Договор еще не проверен или заблокирован</string>
    <string name="BAEC_NO_AUTHORIZATION">Необходима авторизация</string>
    <string name="BAEC_REMOTE_SERVICE_IS_UNAVAILABLE">Сервер в удаленном городе недоступен</string>
    <string name="BAEC_STATUS_BLOCKED">Договор заблокирован</string>
    <string name="BAEC_STATUS_DELETED">МОСТ активируется в течение 30 мин.</string>
    <string name="BAEC_STATUS_NEW">Договор еще не проверен</string>
    <string name="BAEC_STATUS_REJECTED">Договор отклонен</string>
    <string name="BAEC_STATUS_REPEAT">Необходимо повторно отправить некоторые документы</string>
    <string name="BAEC_TOO_MANY_ATTEMPTS">Временные проблемы, попробуйте зайти позже...</string>
    <string name="BAEC_UNKNOWN">Неизвестная ошибка</string>
    <string name="BAEC_WRONG_PHONE_FORMAT">Неверный формат номера телефона</string>
    <string name="BAEC_WRONG_PHONE_FORMAT_LONG">"Номер телефона не указан.
Перейдите в настройки и заполните номер телефона."</string>
    <string name="BREC_DRIVER_DOC_SCAN_FILE_IS_TOO_BIG">Файл документа слишком большой</string>
    <string name="BREC_DRIVER_DOC_SCAN_FILE_IS_TOO_SMALL">Файл документа слишком мал</string>
    <string name="BREC_DRIVER_DOC_SCAN_INCORRECT_FILE_TYPE">Файл документа имеет неверное расширение</string>
    <string name="BREC_DRIVER_LICENSE_BACK">Не удалось отправить фотографию водительских прав (вторая страница): %s</string>
    <string name="BREC_DRIVER_LICENSE_FRONT">Не удалось отправить фотографию водительских прав (первая страница): %s</string>
    <string name="BREC_DRIVER_PHONE_ALREADY_EXISTS">Водитель с таким номером телефона уже есть</string>
    <string name="BREC_DRIVER_WRONG_CONTRACT_NUMBER">Неверный логин</string>
    <string name="BREC_DRIVER_WRONG_PASSWORD">Неверный пароль</string>
    <string name="BREC_DRIVER_WRONG_REGISTRATION_DATA">Неверные данные</string>
    <string name="BREC_PASSPORT_PHOTO">Не удалось отправить фотографию паспорта: %s</string>
    <string name="BREC_TAXI_LICENSE_BACK">Не удалось отправить фотографию разрешения на осуществеление деятельности такси (первая страница): %s</string>
    <string name="BREC_TAXI_LICENSE_FRONT">Не удалось отправить фотографию разрешения на осуществление деятельности такси (вторая страница): %s</string>
    <string name="BREC_UNKNOWN">Неизвестная ошибка</string>
    <string name="BREC_VRC_BACK">Не удалось отправить фотографию свидетельства о регистрации ТС (первая страница): %s</string>
    <string name="BREC_VRC_FRONT">Не удалось отправить фотографию свидетельства о регистрации ТС (вторая страница): %s</string>
    <string name="Back">Back</string>
    <string name="Boarding2">Boarding - %1$s %2$s</string>
    <string name="Bridge">Bridge</string>
    <string name="Bridge_clients_didnt_come_out">"Client didn't come out"</string>
    <string name="Bridge_confirmation_on_driver_take_order_action">Do you confirm that you accept the order through the system BRIDGE with the cost of %1$s %2$s</string>
    <string name="Bridge_enter_question">Start the mode \"Bridge\"?</string>
    <string name="Bridge_enter_text">Do you agree to receive intercity orders through the system \"Bridge\" with fixed cost. The ride cost is calculated based on 40% discount from the main ride fare. You should accept the order only if you will drive the same route!</string>
    <string name="Bridge_free_order_title">Available order through the system \"Bridge\"</string>
    <string name="Bridge_free_orders_title">Available orders through the system \"Bridge\"</string>
    <string name="Bridge_home_10_days">Для доступа к предварительным заказам вы должны выполнить %d заказов в родном городе за последние 10 дней.</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Continue">Continue</string>
    <string name="Error">Error</string>
    <string name="Registration_car_color">Цвет автомобиля</string>
    <string name="Registration_car_license">Номер разрешения</string>
    <string name="Registration_car_license_exp">Срок действия разрешения</string>
    <string name="Registration_car_model">Марка и модель автомобиля</string>
    <string name="Registration_car_pwd">Пароль</string>
    <string name="Registration_car_pwd_hint">(Должен состоять из 6 цифр)</string>
    <string name="Registration_car_year">Год выпуска автомобиля</string>
    <string name="Send_message_to_developers">Send errors to developers</string>
    <string name="Setup_password">"Setup private drivers's password"</string>
    <string name="Start_update_process">Update the app</string>
    <string name="Try_to_start_application">Try to start app</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="city_dialog_title">Выберите город</string>
    <string name="next_reg">Продолжить</string>
    <string name="permission_dialog_camera_desc">Для удаленной регистрации или фотоотчета при открытии смены</string>
    <string name="permission_dialog_camera_title">Камера</string>
    <string name="permission_dialog_location_desc">Текущее местоположение</string>
    <string name="permission_dialog_location_title">Местоположение</string>
    <string name="permission_dialog_memory_desc">Сохранение фотоотчета перед отправкой</string>
    <string name="permission_dialog_memory_title">Память телефона</string>
    <string name="permission_dialog_title">Разрешить приложению «ТапТакси» доступ к данным устройства?</string>
    <string name="registration_start_license">Водительское удостоверение;</string>
    <string name="registration_start_passport">Паспорт;</string>
    <string name="registration_start_taxi">Разрешение на осуществление деятельности такси.</string>
    <string name="registration_start_text_new">"Заполните обязательные поля регистрационной формы. Проверьте правильность введенных данных.

В процессе регистрации необходимо будет сделать фотографии следующих документов:"</string>
    <string name="registration_start_vehicle">Свидетельство о регистрации ТС;</string>
</resources>