<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/dialog_background_white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fadeScrollbars="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:paddingLeft="12.0dip" android:paddingTop="24.0dip" android:paddingRight="12.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="28.0sp" android:textColor="@color/mostly_black" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:text="@string/Setup_password" />
        <TextView android:textSize="18.0sp" android:textColor="@color/mostly_black" android:id="@id/desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="19.0dip" android:layout_marginRight="4.0dip" android:text="@string/About_driver_password_attention" />
        <androidx.appcompat.widget.AppCompatEditText android:theme="@style/MyMsgEditTextThemeLight" android:textSize="20.0sp" android:textColor="@color/et_text" android:textColorHint="@color/et_hint" android:id="@id/editTextPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/About_driver_password" android:maxLines="1" android:singleLine="true" android:maxLength="4" android:inputType="textPassword" android:imeOptions="flagNoExtractUi" />
        <androidx.appcompat.widget.AppCompatEditText android:theme="@style/MyMsgEditTextThemeLight" android:textSize="20.0sp" android:textColor="@color/et_text" android:textColorHint="@color/et_hint" android:id="@id/editTextConfirmedPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/Confirm_password" android:maxLines="1" android:singleLine="true" android:maxLength="4" android:inputType="textPassword" android:imeOptions="actionDone|flagNoExtractUi" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip">
            <Button android:textSize="14.0sp" android:textColor="@color/reg_chb_img" android:id="@id/cancelButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Cancel" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Widget.AppCompat.Button.Borderless" />
            <Button android:textSize="14.0sp" android:textColor="@color/accent" android:id="@id/okButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Continue" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Widget.AppCompat.Button.Borderless" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
