<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/coordinator" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:theme="@style/ThemeOverlay" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" app:contentInsetLeft="@dimen/toolbar_left" app:contentInsetStart="@dimen/toolbar_left" app:popupTheme="@style/ToolbarTheme" style="@style/HeaderBar" />
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/wrapper" android:background="@color/main_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fadeScrollbars="false">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_s" android:layout_marginRight="@dimen/margin_s">
                        <androidx.appcompat.widget.AppCompatEditText android:theme="@style/MyEditTextTheme2" android:textSize="20.0sp" android:textColor="@color/et_text" android:textColorHint="@color/et_text" android:id="@id/editTextModel" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xs" android:hint="@string/Registration_car_model" android:cursorVisible="false" android:maxLines="1" android:singleLine="true" android:maxLength="100" android:inputType="textNoSuggestions" android:imeOptions="flagNoExtractUi" android:drawableEnd="@drawable/icons_reg_chevron_right" />
                        <androidx.appcompat.widget.AppCompatEditText android:theme="@style/MyEditTextTheme" android:textSize="20.0sp" android:textColor="@color/et_text" android:textColorHint="@color/et_hint" android:id="@id/editTextNumber" android:nextFocusDown="@id/editTextYear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:maxLines="1" android:singleLine="true" android:maxLength="9" android:inputType="text" android:imeOptions="flagNoExtractUi" android:textAllCaps="true" />
                        <androidx.appcompat.widget.AppCompatEditText android:theme="@style/MyEditTextTheme" android:textSize="20.0sp" android:textColor="@color/et_text" android:textColorHint="@color/et_hint" android:id="@id/editTextYear" android:nextFocusDown="@id/editTextLicense" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:hint="@string/Registration_car_year" android:maxLines="1" android:singleLine="true" android:maxLength="4" android:inputType="number" android:imeOptions="flagNoExtractUi" />
                        <androidx.appcompat.widget.AppCompatEditText android:theme="@style/MyEditTextTheme2" android:textSize="20.0sp" android:textColor="@color/et_text" android:textColorHint="@color/et_text" android:id="@id/editTextColor" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:hint="@string/Registration_car_color" android:cursorVisible="false" android:maxLines="1" android:singleLine="true" android:maxLength="100" android:inputType="textNoSuggestions" android:imeOptions="flagNoExtractUi" android:drawableEnd="@drawable/icons_reg_chevron_right" />
                        <androidx.appcompat.widget.AppCompatEditText android:theme="@style/MyEditTextTheme" android:textSize="20.0sp" android:textColor="@color/et_text" android:textColorHint="@color/et_hint" android:id="@id/editTextLicense" android:nextFocusDown="@id/editTextLicenseExp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:hint="@string/Registration_car_license" android:maxLines="1" android:singleLine="true" android:maxLength="20" android:inputType="text" android:imeOptions="flagNoExtractUi" />
                        <androidx.appcompat.widget.AppCompatEditText android:theme="@style/MyEditTextTheme" android:textSize="20.0sp" android:textColor="@color/et_text" android:textColorHint="@color/et_hint" android:id="@id/editTextLicenseExp" android:nextFocusDown="@id/editTextPwd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:hint="@string/Registration_car_license_exp" android:maxLines="1" android:singleLine="true" android:maxLength="8" android:inputType="number" android:imeOptions="flagNoExtractUi" />
                        <androidx.appcompat.widget.AppCompatEditText android:theme="@style/MyEditTextTheme" android:textSize="20.0sp" android:textColor="@color/et_text" android:textColorHint="@color/et_hint" android:id="@id/editTextPwd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:hint="@string/Registration_car_pwd" android:maxLines="1" android:maxLength="6" android:inputType="number" android:imeOptions="flagNoExtractUi" />
                        <TextView android:textSize="12.0sp" android:textColor="@color/et_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Registration_car_pwd_hint" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/wrapperNext" android:background="@drawable/next_button" android:layout_width="fill_parent" android:layout_height="72.0dip" android:layout_margin="3.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/textButton" android:background="?selectableItemBackground" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/next_reg" android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <View android:theme="@style/ElevationCompatTheme" android:background="@drawable/elevation_compat" android:layout_width="fill_parent" android:layout_height="4.0dip" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
