<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/topView" android:background="@drawable/dialog_background_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="28.0sp" android:textColor="@color/mostly_black" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_s" android:layout_marginTop="@dimen/margin_ss" android:layout_marginRight="@dimen/margin_s" android:text="@string/city_dialog_title" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:layout_above="@id/bottom" android:layout_below="@id/title">
        <ListView android:id="@id/listView" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/margin_s" android:layout_marginRight="@dimen/margin_s" android:fadeScrollbars="false" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginBottom="@dimen/margin_s" android:layout_alignParentBottom="true">
        <Button android:textSize="14.0sp" android:textColor="@color/reg_chb_img" android:id="@id/cancelButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Cancel" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Widget.AppCompat.Button.Borderless" />
        <Button android:textSize="14.0sp" android:textColor="@color/accent" android:id="@id/okButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Continue" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>
</RelativeLayout>
